Mudança da programação

--- a/index.html
+++ b/index.html
@@ -108,33 +108,33 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+    </div>
         <!--Mini Banners-->
         <div class="col-12 col-md-10 offset-md-1" id="mini-banners">
             <div class="row">
                 <div class="col-12 col-md-4">
                     <div class="card text-center">
-                        <i class="bi bi-box primary-color"></i>
+                        <i class="bi bi-bag primary-color"></i>
                         <div class="card-body">
-                            <h5 class="card-title primary-color">Compre Agora<h5>
-                            <p class="card-text secondary-color">Produtos de Qualidade e Custo Mínimo.</p>
-                            <a href="#" class="btn btn-dark">Comprar</a>
-                        </div>
-                        </div>
+                            <h5 class="card-title primary-color">Compre Agora</h5>
+                                <p class="card-text secondary-color">Produtos de Qualidade e Custo Mínimo.</p>
+                                <a href="#" class="btn btn-dark">Comprar</a>
+                            </div>
+                            </div>
                     </div>
-                </div>
                 <div class="col-12 col-md-4">
                     <div class="card text-center">
-                        <i class="bi bi-layers primary-color"></i>
+                        <i class="bi bi-cash-coin primary-color"></i>
                         <div class="card-body">
                             <h5 class="card-title primary-color">Pagamento</h5>
                             <p class="card-text secondary-color">Adicionar Método de Pagamento.</p>
-                            <a href="#" class="btn btn-dark">Pagar</a>
+                            <a href="#" class="btn btn-dark">Selecionar</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card text-center">
-                        <i class="bi bi-lightning-charge primary-color"></i>
+                        <i class="bi bi-box-seam primary-color"></i>
                         <div class="card-body">
                             <h5 class="card-title primary-color">Encomendas</h5>
                             <p class="card-text secondary-color">Suporte de Segurança e Rastreamento da Entrega.</p>
@@ -144,12 +144,11 @@
                 </div>
             </div>
         </div>
-    </div>
     <!--Destaques-->
     <div class="container" id="featured-container">
         <div class="col-12">
             <h2 class="title primary-color">Categorias</h2>
-            <p class="subtitle secondary-color">Conheça os nossos produtos catalogados:</p>
+            <p class="subtitle secondary-color">Conheça nossos produtos catalogados:</p>
         </div>
         <div class="col-12" id="featured-images">
             <div class="row g-4">
@@ -247,12 +246,12 @@
                 <div class="col-12" id="footer-top">
                     <div class="row justify-content-between">
                         <div class="col-4">
-                            <h2>iMovi</h2>
+                            <h2>Eletrotec</h2>
                         </div>
-                        <div class="col-4" id="social-icons">
+                        <div class="col-12" id="social-icons">
                             <i class="bi bi-facebook"></i>
                             <i class="bi bi-instagram"></i>
-                            <i class="bi bi-youtube"></i>
+                            <i class="bi-telegram"></i>
                             <i class="bi bi-twitter"></i>
                             <i class="bi bi-whatsapp"></i>
                         </div>
@@ -274,21 +273,21 @@
                         <div class="col-12 col-md-4" id="contact-container">
                             <h4>Formas de Contato:</h4>
                             <p class="secondary-color">(16)99999-9999</p>
-                            <p class="secondary-color">contato@imovi.com</p>
+                            <p class="secondary-color">contato@eletrotec.com</p>
                         </div>
                         <div class="col-12 col-md-4" id="links-container">
                             <div class="row">
                                 <h4>Você pode estar procurando por:</h4>
                                 <div class="col-6">
                                     <ul class="list-unstyled">
-                                        <li><a href="#" class="secondary-color">Projetos</a></li>
-                                        <li><a href="#" class="secondary-color">Imóveis</a></li>
                                         <li><a href="#" class="secondary-color">Vendas</a></li>
+                                        <li><a href="#" class="secondary-color">Revendas</a></li>
+                                        <li><a href="#" class="secondary-color">Troca</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-6">
                                     <ul class="list-unstyled">
-                                        <li><a href="#" class="secondary-color">Contratar</a></li>
+                                        <li><a href="#" class="secondary-color">Devolução</a></li>
                                         <li><a href="#" class="secondary-color">Trabalhe Conosco</a></li>
                                         <li><a href="#" class="secondary-color">Contato</a></li>
                                     </ul>
@@ -301,10 +300,10 @@
                 <div class="col-12" id="footer-bottom">
                     <div class="row justify-content-between">
                         <div class="col-12 col-md-3">
-                            <p class="secondary-color">iMovi &copy; 2022</p>
+                            <p class="secondary-color">Eletrotec &copy; 2022</p>
                         </div>
                         <div class="col-12 col-md-3">
-                            <p class="secondary-color">Realizamos o seu projeto <i class="bi bi-heart"></i></p>
+                            <p class="secondary-color">Atendemos seu Pedido <i class="bi bi-telephone"></i></p>
                         </div>
                     </div>
                 </div>
